# S_Dudzik_275762_ztp

lista_1/: CMakeLists.txt  Makefile  Sprawozdanie.md  build.sh
lista_1/lib/hello/: hello.cpp  hello.h
lista_1/src/prog1/: main.cpp
lista_1/src/prog2/: main.cpp
lista_2/: CMakeLists.txt  Sprawozdanie.md
lista_2/src/: main.cpp  tokenizer.cpp  tokenizer.hpp
lista_2/tests/: test_tokenizer.cpp
lista_3/: CMakeCache.txt  CMakeLists.txt  Makefile  Sprawozdanie.md  cmake_install.cmake  zad1.cpp  zad2.cpp  zad2_asm.cpp  zad3.cpp
lista_4/: CMakeCache.txt  CMakeLists.txt  Makefile  Sprawozdanie.md  cmake_install.cmake  lista_stl.cpp
